Libraries/GTK/src/gtkextra/gtkplot3d.h

typedef struct _GtkPlot3D		GtkPlot3D;
typedef enum
{
  GTK_PLOT_PLANE_XY	= 0,
  GTK_PLOT_PLANE_YX	= 0,
  GTK_PLOT_PLANE_XZ	= 1,
  GTK_PLOT_PLANE_ZX	= 1,
  GTK_PLOT_PLANE_YZ	= 2,
  GTK_PLOT_PLANE_ZY	= 2,
} GtkPlotPlane;
typedef enum
{
  GTK_PLOT_SIDE_XY	= 1 << 0 ,
  GTK_PLOT_SIDE_XZ	= 1 << 1 ,
  GTK_PLOT_SIDE_YX	= 1 << 2 ,
  GTK_PLOT_SIDE_YZ	= 1 << 3 ,
  GTK_PLOT_SIDE_ZX	= 1 << 4 ,
  GTK_PLOT_SIDE_ZY	= 1 << 5 ,
} GtkPlotSide;
/* rotations around global axes */
void		gtk_plot3d_rotate		(GtkPlot3D *plot,
						 gdouble angle_x,
						 gdouble angle_y,
						 gdouble angle_z);
void 		gtk_plot3d_rotate_vector	(GtkPlot3D *plot,
                          			 GtkPlotVector *vector,
                          			 gdouble a1,
						 gdouble a2,
						 gdouble a3);
/* rotations around local axes */
void 		gtk_plot3d_reset_angles		(GtkPlot3D *plot);
void 		gtk_plot3d_rotate_x		(GtkPlot3D *plot,
						 gdouble angle);
void 		gtk_plot3d_rotate_y		(GtkPlot3D *plot,
						 gdouble angle);
void 		gtk_plot3d_rotate_z		(GtkPlot3D *plot,
						 gdouble angle);
void 		gtk_plot3d_get_pixel		(GtkPlot3D *plot,
                          			 gdouble x,
                                                 gdouble y,
                                                 gdouble z,
                                                 gdouble *px,
                                                 gdouble *py,
                                                 gdouble *pz);
void 		gtk_plot3d_set_xrange		(GtkPlot3D *plot,
						 gdouble min, gdouble max);
void 		gtk_plot3d_set_xfactor		(GtkPlot3D *plot,
						 gdouble xfactor);
gdouble 	gtk_plot3d_get_xfactor		(GtkPlot3D *plot);
gdouble 	gtk_plot3d_get_yfactor		(GtkPlot3D *plot);
gdouble 	gtk_plot3d_get_zfactor		(GtkPlot3D *plot);
/* Planes */
void		gtk_plot3d_plane_set_color	(GtkPlot3D *plot,
						 GtkPlotPlane plane,
						 const GdkColor *color);
void		gtk_plot3d_plane_set_visible	(GtkPlot3D *plot,
						 GtkPlotPlane plane,
						 gboolean visible);
gboolean	gtk_plot3d_plane_visible	(GtkPlot3D *plot,
						 GtkPlotPlane plane);
GtkPlotAxis *	gtk_plot3d_get_side		(GtkPlot3D *plot,
						 GtkPlotSide side);
void 		gtk_plot3d_set_titles_offset 	(GtkPlot3D *plot,
                                                 gint offset);
gint 		gtk_plot3d_get_titles_offset 	(GtkPlot3D *plot);
/* Grids */
void            gtk_plot3d_major_grids_set_visible    (GtkPlot3D *plot,
						       gboolean x,
						       gboolean y,
						       gboolean z);
void            gtk_plot3d_minor_grids_set_visible    (GtkPlot3D *plot,
						       gboolean x,
						       gboolean y,
						       gboolean z);
void            gtk_plot3d_major_grids_visible        (GtkPlot3D *plot,
						       gboolean *x,
						       gboolean *y,
						       gboolean *z);
void            gtk_plot3d_minor_grids_visible        (GtkPlot3D *plot,
						       gboolean *x,
						       gboolean *y,
						       gboolean *z);
void            gtk_plot3d_major_zgrid_set_attributes  (GtkPlot3D *plot,
							GtkPlotLineStyle style,
							gfloat width,
                                                       const GdkColor *color);
void            gtk_plot3d_major_zgrid_get_attributes  (GtkPlot3D *plot,
                                                       GtkPlotLineStyle *style,
                                                       gfloat *width,
                                                       GdkColor *color);
void            gtk_plot3d_minor_zgrid_set_attributes  (GtkPlot3D *plot,
                                                       GtkPlotLineStyle style,
                                                       gfloat width,
                                                       const GdkColor *color);
void            gtk_plot3d_minor_zgrid_get_attributes  (GtkPlot3D *plot,
                                                       GtkPlotLineStyle *style,
                                                       gfloat *width,
                                                       GdkColor *color);