Libraries/GTK/src/gtk-extra-plot_3d.adb


   procedure Get_Pixel
     (Plot       : access Gtk_Plot_3D_Record;
      X, Y, Z    : Gdouble;
      Px, Py, Pz : out Gdouble)
   is
      procedure Internal
        (Plot       : System.Address;
         X, Y, Z    : Gdouble;
         Px, Py, Pz : out Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_get_pixel");
   begin
      Internal (Get_Object (Plot), X, Y, Z, Px, Py, Pz);
   end Get_Pixel;

   --------------
   -- Get_Side --
   --------------

   function Get_Side
     (Plot   : access Gtk_Plot_3D_Record;
      Side   : Plot_Side) return Gtk_Plot_Axis
   is
      function Internal
        (Plot : System.Address; Side : Plot_Side) return System.Address;
      pragma Import (C, Internal, "gtk_plot3d_get_side");

      Stub : Gtk_Plot_Axis_Record;

   begin
      return Gtk_Plot_Axis (Get_User_Data
         (Internal (Get_Object (Plot), Side), Stub));
   end Get_Side;

   -----------------------
   -- Get_Titles_Offset --
   -----------------------

   function Get_Titles_Offset (Plot : access Gtk_Plot_3D_Record) return Gint is
      function Internal (Plot   : System.Address) return Gint;
      pragma Import (C, Internal, "gtk_plot3d_get_titles_offset");
   begin
      return Internal (Get_Object (Plot));
   end Get_Titles_Offset;

   -----------------
   -- Get_Xfactor --
   -----------------

   function Get_Xfactor (Plot   : access Gtk_Plot_3D_Record) return Gdouble
   is
      function Internal (Plot   : System.Address) return Gdouble;
      pragma Import (C, Internal, "gtk_plot3d_get_xfactor");
   begin
      return Internal (Get_Object (Plot));
   end Get_Xfactor;

   -----------------
   -- Get_Yfactor --
   -----------------

   function Get_Yfactor (Plot   : access Gtk_Plot_3D_Record) return Gdouble
   is
      function Internal (Plot   : System.Address) return Gdouble;
      pragma Import (C, Internal, "gtk_plot3d_get_yfactor");
   begin
      return Internal (Get_Object (Plot));
   end Get_Yfactor;

   -----------------
   -- Get_Zfactor --
   -----------------

   function Get_Zfactor (Plot   : access Gtk_Plot_3D_Record) return Gdouble
   is
      function Internal (Plot   : System.Address) return Gdouble;
      pragma Import (C, Internal, "gtk_plot3d_get_zfactor");
   begin
      return Internal (Get_Object (Plot));
   end Get_Zfactor;

   -----------------------------
   -- Major_Grids_Set_Visible --
   -----------------------------

   procedure Major_Grids_Set_Visible
     (Plot : access Gtk_Plot_3D_Record; X, Y, Z : Boolean)
   is
      procedure Internal (Plot : System.Address; X, Y, Z : Gint);
      pragma Import (C, Internal, "gtk_plot3d_major_grids_set_visible");
   begin
      Internal
        (Get_Object (Plot), Boolean'Pos (X), Boolean'Pos (Y), Boolean'Pos (Z));
   end Major_Grids_Set_Visible;

   -------------------------
   -- Major_Grids_Visible --
   -------------------------

   procedure Major_Grids_Visible
     (Plot : access Gtk_Plot_3D_Record; X, Y, Z : out Boolean)
   is
      procedure Internal (Plot : System.Address; X, Y, Z : out Gboolean);
      pragma Import (C, Internal, "gtk_plot3d_major_grids_visible");
      Xb, Yb, Zb : Gboolean;
   begin
      Internal (Get_Object (Plot), Xb, Yb, Zb);
      X := Boolean'Val (Xb);
      Y := Boolean'Val (Yb);
      Z := Boolean'Val (Zb);
   end Major_Grids_Visible;

   --------------------------------
   -- Major_Zgrid_Get_Attributes --
   --------------------------------

   procedure Major_Zgrid_Get_Attributes
     (Plot  : access Gtk_Plot_3D_Record;
      Style : out Plot_Line_Style;
      Width : out Gfloat;
      Color : out Gdk.Color.Gdk_Color)
   is
      procedure Internal
        (Plot  : System.Address;
         Style : out Plot_Line_Style;
         Width : out Gfloat;
         Color : System.Address);
      pragma Import (C, Internal, "gtk_plot3d_major_zgrid_get_attributes");
      C : aliased Gdk_Color;
   begin
      Internal (Get_Object (Plot), Style, Width, C'Address);
      Color := C;
   end Major_Zgrid_Get_Attributes;

   --------------------------------
   -- Major_Zgrid_Set_Attributes --
   --------------------------------

   procedure Major_Zgrid_Set_Attributes
     (Plot  : access Gtk_Plot_3D_Record;
      Style : Plot_Line_Style;
      Width : Gfloat;
      Color : Gdk.Color.Gdk_Color)
   is
      procedure Internal
        (Plot  : System.Address;
         Style : Plot_Line_Style;
         Width : Gfloat;
         Color : System.Address);
      pragma Import (C, Internal, "gtk_plot3d_major_zgrid_set_attributes");

      C : aliased Gdk_Color := Color;

   begin
      Internal (Get_Object (Plot), Style, Width, C'Address);
   end Major_Zgrid_Set_Attributes;

   -----------------------------
   -- Minor_Grids_Set_Visible --
   -----------------------------

   procedure Minor_Grids_Set_Visible
     (Plot : access Gtk_Plot_3D_Record; X, Y, Z : Boolean)
   is
      procedure Internal (Plot : System.Address; X, Y, Z : Gint);
      pragma Import (C, Internal, "gtk_plot3d_minor_grids_set_visible");
   begin
      Internal
        (Get_Object (Plot), Boolean'Pos (X), Boolean'Pos (Y), Boolean'Pos (Z));
   end Minor_Grids_Set_Visible;

   -------------------------
   -- Minor_Grids_Visible --
   -------------------------

   procedure Minor_Grids_Visible
     (Plot : access Gtk_Plot_3D_Record; X, Y, Z : out Boolean)
   is
      procedure Internal (Plot : System.Address; X, Y, Z : out Gboolean);
      pragma Import (C, Internal, "gtk_plot3d_minor_grids_visible");
      Xb, Yb, Zb : Gboolean;
   begin
      Internal (Get_Object (Plot), Xb, Yb, Zb);
      X := Boolean'Val (Xb);
      Y := Boolean'Val (Yb);
      Z := Boolean'Val (Zb);
   end Minor_Grids_Visible;

   --------------------------------
   -- Minor_Zgrid_Get_Attributes --
   --------------------------------

   procedure Minor_Zgrid_Get_Attributes
     (Plot  : access Gtk_Plot_3D_Record;
      Style : out Plot_Line_Style;
      Width : out Gfloat;
      Color : out Gdk.Color.Gdk_Color)
   is
      procedure Internal
        (Plot  : System.Address;
         Style : out Plot_Line_Style;
         Width : out Gfloat;
         Color : System.Address);
      pragma Import (C, Internal, "gtk_plot3d_minor_zgrid_get_attributes");
      C : aliased Gdk_Color;
   begin
      Internal (Get_Object (Plot), Style, Width, C'Address);
      Color := C;
   end Minor_Zgrid_Get_Attributes;

   --------------------------------
   -- Minor_Zgrid_Set_Attributes --
   --------------------------------

   procedure Minor_Zgrid_Set_Attributes
     (Plot  : access Gtk_Plot_3D_Record;
      Style : Plot_Line_Style;
      Width : Gfloat;
      Color : Gdk.Color.Gdk_Color)
   is
      procedure Internal
        (Plot  : System.Address;
         Style : Plot_Line_Style;
         Width : Gfloat;
         Color : System.Address);
      pragma Import (C, Internal, "gtk_plot3d_minor_zgrid_set_attributes");

      C : aliased Gdk_Color := Color;

   begin
      Internal (Get_Object (Plot), Style, Width, C'Address);
   end Minor_Zgrid_Set_Attributes;

   ---------------------
   -- Plane_Set_Color --
   ---------------------

   procedure Plane_Set_Color
     (Plot  : access Gtk_Plot_3D_Record;
      Plane : Plot_Plane;
      Color : Gdk.Color.Gdk_Color)
   is
      procedure Internal
        (Plot  : System.Address;
         Plane : Plot_Plane;
         Color : System.Address);
      pragma Import (C, Internal, "gtk_plot3d_plane_set_color");

      C : aliased Gdk_Color := Color;

   begin
      Internal (Get_Object (Plot), Plane, C'Address);
   end Plane_Set_Color;

   -----------------------
   -- Plane_Set_Visible --
   -----------------------

   procedure Plane_Set_Visible
     (Plot    : access Gtk_Plot_3D_Record;
      Plane   : Plot_Plane;
      Visible : Boolean)
   is
      procedure Internal
        (Plot : System.Address; Plane : Plot_Plane; Visible : Gint);
      pragma Import (C, Internal, "gtk_plot3d_plane_set_visible");

   begin
      Internal
        (Get_Object (Plot), Plane, Boolean'Pos (Visible));
   end Plane_Set_Visible;

   -------------------
   -- Plane_Visible --
   -------------------

   function Plane_Visible
     (Plot : access Gtk_Plot_3D_Record; Plane : Plot_Plane) return Boolean
   is
      function Internal
        (Plot : System.Address; Plane : Plot_Plane) return Gint;
      pragma Import (C, Internal, "gtk_plot3d_plane_visible");

   begin
      return Boolean'Val
        (Internal (Get_Object (Plot), Plane));
   end Plane_Visible;

   ------------------
   -- Reset_Angles --
   ------------------

   procedure Reset_Angles (Plot : access Gtk_Plot_3D_Record) is
      procedure Internal (Plot : System.Address);
      pragma Import (C, Internal, "gtk_plot3d_reset_angles");
   begin
      Internal (Get_Object (Plot));
   end Reset_Angles;

   ------------
   -- Rotate --
   ------------

   procedure Rotate
     (Plot    : access Gtk_Plot_3D_Record; Angle_X, Angle_Y, Angle_Z : Gdouble)
   is
      procedure Internal
        (Plot    : System.Address; Angle_X, Angle_Y, Angle_Z : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_rotate");
   begin
      Internal (Get_Object (Plot), Angle_X, Angle_Y, Angle_Z);
   end Rotate;

   -------------------
   -- Rotate_Vector --
   -------------------

   procedure Rotate_Vector
     (Plot   : access Gtk_Plot_3D_Record;
      Vector : Plot_Vector;
      A1, A2, A3 : Gdouble)
   is
      procedure Internal
        (Plot, Vector : System.Address; A1, A2, A3 : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_rotate_vector");
      V : aliased Plot_Vector := Vector;
   begin
      Internal (Get_Object (Plot), V'Address, A1, A2, A3);
   end Rotate_Vector;

   --------------
   -- Rotate_X --
   --------------

   procedure Rotate_X (Plot  : access Gtk_Plot_3D_Record; Angle : Gdouble) is
      procedure Internal (Plot  : System.Address; Angle : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_rotate_x");
   begin
      Internal (Get_Object (Plot), Angle);
   end Rotate_X;

   --------------
   -- Rotate_Y --
   --------------

   procedure Rotate_Y (Plot  : access Gtk_Plot_3D_Record; Angle : Gdouble) is
      procedure Internal (Plot  : System.Address; Angle : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_rotate_y");
   begin
      Internal (Get_Object (Plot), Angle);
   end Rotate_Y;

   --------------
   -- Rotate_Z --
   --------------

   procedure Rotate_Z (Plot  : access Gtk_Plot_3D_Record;  Angle : Gdouble) is
      procedure Internal (Plot  : System.Address; Angle : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_rotate_z");
   begin
      Internal (Get_Object (Plot), Angle);
   end Rotate_Z;

   -----------------------
   -- Set_Titles_Offset --
   -----------------------

   procedure Set_Titles_Offset
     (Plot : access Gtk_Plot_3D_Record; Offset : Gint)
   is
      procedure Internal (Plot : System.Address; Offset : Gint);
      pragma Import (C, Internal, "gtk_plot3d_set_titles_offset");
   begin
      Internal (Get_Object (Plot), Offset);
   end Set_Titles_Offset;

   -----------------
   -- Set_Xfactor --
   -----------------

   procedure Set_Xfactor (Plot : access Gtk_Plot_3D_Record; Xfactor : Gdouble)
   is
      procedure Internal (Plot    : System.Address; Xfactor : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_set_xfactor");
   begin
      Internal (Get_Object (Plot), Xfactor);
   end Set_Xfactor;

   ----------------
   -- Set_Xrange --
   ----------------

   procedure Set_Xrange (Plot : access Gtk_Plot_3D_Record; Min, Max : Gdouble)
   is
      procedure Internal (Plot : System.Address; Min, Max  : Gdouble);
      pragma Import (C, Internal, "gtk_plot3d_set_xrange");
   begin
      Internal (Get_Object (Plot), Min,  Max);
   end Set_Xrange;

   -----------------
   -- Set_Yfactor --
   -----------------
